OneDrive/Pictures/Desktop/manifest/pods/workshopom k8s/staefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sqlserver
spec:
  minReadySeconds: 5
  updateStrategy:
      type: RollingUpdate
      rollingUpdate:
          maxUnavailable: 50%
  selector:
    matchLabels:
      app: sqlserver
  serviceName: svc
  replicas: 2
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/azure-sql-edge
        ports:
        - containerPort: 1434
          name: web
        volumeMounts:
        - name: sqlserverdata
          mountPath: /var/opt/mssql
  volumeClaimTemplates:
  - metadata:
      name: sqlserver
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      selector:
        matchLabels:
          app: sqlserver
      storageClassName: managed-csi
