OneDrive/Pictures/Desktop/manifest/pods/workshopom k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  minReadySeconds: 5
  updateStrategy:
      type: RollingUpdate
      rollingUpdate:
          maxUnavailable: 50%
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: svc1
  replicas: 2
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: myapp
        image: rabbitmq:3-management-alpine
        ports:
        - containerPort: 15672
        - containerPort: 5672
        volumeMounts:
          - name: rabbitmq
            mountPath: /var/lib/rabbitmq
          - name: rabbitmq-config
            mountPath: /etc/pitstop/
  volumeClaimTemplates:
  - metadata:
      name: rabbitmq
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      selector:
        matchLabels:
          app: rabbitmq
      storageClassName: managed-csi
