OneDrive/Pictures/Desktop/manifest/pods/workshopom k8s/service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: svc 
spec:
  clusterIP: None
  selector:
    app: rabbitmq 
  ports:
    - name: svc 
      port: 1434
      targetPort: 1434
      protocol: TCP
