OneDrive/Pictures/Desktop/manifest/pods/workshopom k8s/service1.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: svc1
spec:
  clusterIP: None
  selector:
    app: sqlserver
  ports:
    - name: svc-15672
      port: 15672
      targetPort: 15672
    - name: svc-5672
      port: 5672
      targetPort: 5672
